--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -130,10 +130,10 @@
   width: 85px;
   height: 50px;
   background-repeat: no-repeat;
-  background-image: linear-gradient(var(--color) 50px, transparent 0),
+  background-image:
     linear-gradient(var(--color) 50px, transparent 0), linear-gradient(var(--color) 50px, transparent 0),
     linear-gradient(var(--color) 50px, transparent 0), linear-gradient(var(--color) 50px, transparent 0),
-    linear-gradient(var(--color) 50px, transparent 0);
+    linear-gradient(var(--color) 50px, transparent 0), linear-gradient(var(--color) 50px, transparent 0);
   background-position:
     0px center,
     15px center,
